src/chrome/komodo/skin/global/chromeless.less
#windowButtons
{
    .icon-minus-circle2 { color: @window-button-minimize; }
    .icon-plus-circle2 { color: @window-button-maximize; }
    .icon-cancel-circle2 { color: @window-button-close; }
    
    & > toolbarbutton:hover
    {
        transform: scale(1.1);
    }
}

/* Dialogs with hidden chrome */

.dialog:root[hidechrome="true"]:not(.embedded),
dialog:root[hidechrome="true"]:not(.embedded)
{
    .window-wrapper,
    .dialog-content-box,
    .dialog-button-box
    {
        padding: 6px;
    }
    
    & > #titlebar
    {
        padding-bottom: 5px;
        
        & > spacer, #windowButtons
        {
            toolbarbutton
            {
                font-size: 12px;
            }
            
            width: 90px;
        }
    }
}

/* Dialogs with default chrome */

.dialog:not([hidechrome="true"]):not(.embedded)
dialog:not([hidechrome="true"]):not(.embedded)
{
    padding: 6px;
    
    #titlebar,
    resizer
    {
        visibility: collapse;
    }
}

/* Main window with hidden chrome */

#komodo_main[hidechrome="true"]
{
    #toolbox_main
    {
        padding-top: 0;
    }
    
    &:not([show-toolbar="false"])
    {
        #titlebar
        {
            visibility: collapse;
        }
    }
    
    &[show-toolbar="false"] 
    {
        #titlebar
        {
            visibility: visible;
            
            & > spacer, #windowButtons
            {
                width: 90px;
                
                toolbarbutton, .toolbarbutton-text
                {
                    font-size: 12px !important;
                }
            }
        }
        
        #toolbox_main
        {
            padding: 0 2px 2px;
        }
    }
    
    /* Main window resizers */
    
    /**
     * Top resizer. We do not support top left or top right.
     */
    #toolbox_main
    {
        resizer
        {
            background: @special !important;
            height: 4px;
        }
    }
    
    /**
     * Left and bottom left resizer.
     */
    resizer[dir="left"], resizer[dir="bottomleft"]
    {
        background: @contrast !important;
    }
    
    /* account for resizer taking up space */
    #toolbox_side 
    {
        width: 46px;
        padding-right: 2px;
    }
    
    /**
     * Bottom and bottom right resizer
     */
    .resizer-box.bottom > spacer
    {
        width: 46px;
    }
    
    resizer[dir="bottom"], resizer[dir="bottomright"], resizer[dir="right"]
    {
        background: @background !important;
    }
}

/* Main window with default chrome */

#komodo_main:not([hidechrome="true"]) 
{
    #titlebar,
    #windowButtons,
    resizer
    {
        visibility: collapse;
    }
}


/* Resize handlers */

resizer[dir="left"], resizer[dir="right"], resizer[dir="topleft"], resizer[dir="topright"],
resizer[dir="bottomleft"], resizer[dir="bottomright"]
{
    width: 2px;
}

resizer[dir="top"], resizer[dir="bottom"], resizer[dir="topleft"], resizer[dir="topright"],
resizer[dir="bottomleft"], resizer[dir="bottomright"]
{
    height: 2px;
}

resizer[dir="left"] { cursor: e-resize; }
resizer[dir="right"] { cursor: e-resize; }
resizer[dir="top"] { cursor: n-resize; }
resizer[dir="bottom"] { cursor: s-resize; }
resizer[dir="topleft"] { cursor: nw-resize; }
resizer[dir="topright"] { cursor: ne-resize; }
resizer[dir="bottomleft"] { cursor: sw-resize; }
resizer[dir="bottomright"] { cursor: se-resize; -moz-appearance:none; }

resizer
{
    background: @contrast;
}

